[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "von"
version = "0.1.0"
description = "Von - Agentic SDLC CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "textual>=0.50.0",
    "google-genai>=0.3.0",
    "google-antigravity>=0.1.0"
]

[project.scripts]
von = "von:main"
